# ethys-langchain

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_RELEASE_WORKFLOW.md  SECURITY.md  create_pr.sh  llm.txt  llms.txt  pr_body.txt  pyproject.toml  repo.config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
.well-known/: agents.json
docs/: 12-28-review.md
examples/: langchain_agent_connect_verify.py  langchain_agent_discovery_and_trust.py  telemetry_callback_example.py
scripts/: bootstrap.sh  pr.sh  repo_meta.sh
src/langchain_ethys402/: __init__.py  auth.py  callbacks.py  client.py  config.py  errors.py  retrievers.py  tools.py  types.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_protocol_alignment.py  test_tools.py
